# ChangeLog for net-nntp/nzbget
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.83 2014/01/04 06:20:04 radhermit Exp $

  04 Jan 2014; Tim Harder <radhermit@gentoo.org> -nzbget-9.1.ebuild,
  -nzbget-12.0_pre906.ebuild, -nzbget-12.0_pre914.ebuild,
  -nzbget-12.0_pre927.ebuild, -files/nzbget-0.7.0-underlinking.patch:
  Remove old.

*nzbget-12.0 (04 Jan 2014)

  04 Jan 2014; Tim Harder <radhermit@gentoo.org> +nzbget-12.0.ebuild:
  Version bump.

*nzbget-12.0_pre927 (28 Dec 2013)

  28 Dec 2013; Tim Harder <radhermit@gentoo.org> +nzbget-12.0_pre927.ebuild:
  Version bump.

*nzbget-12.0_pre914 (02 Dec 2013)

  02 Dec 2013; Tim Harder <radhermit@gentoo.org> +nzbget-12.0_pre914.ebuild:
  Version bump.

  14 Nov 2013; Tim Harder <radhermit@gentoo.org> -nzbget-12.0_pre789.ebuild,
  -nzbget-12.0_pre808.ebuild, -nzbget-12.0_pre860.ebuild,
  -nzbget-12.0_pre883.ebuild:
  Remove old.

*nzbget-12.0_pre906 (14 Nov 2013)

  14 Nov 2013; Tim Harder <radhermit@gentoo.org> +nzbget-12.0_pre906.ebuild:
  Version bump.

*nzbget-12.0_pre883 (03 Nov 2013)

  03 Nov 2013; Tim Harder <radhermit@gentoo.org> +nzbget-12.0_pre883.ebuild:
  Version bump.

*nzbget-12.0_pre860 (08 Oct 2013)

  08 Oct 2013; Tim Harder <radhermit@gentoo.org> +nzbget-12.0_pre860.ebuild:
  Version bump.

*nzbget-12.0_pre808 (05 Sep 2013)

  05 Sep 2013; Tim Harder <radhermit@gentoo.org> +nzbget-12.0_pre808.ebuild:
  Version bump.

*nzbget-12.0_pre789 (26 Aug 2013)

  26 Aug 2013; Tim Harder <radhermit@gentoo.org> +nzbget-12.0_pre789.ebuild:
  Version bump.

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> nzbget-10.2.ebuild:
  Stable for x86, wrt bug #472708

  02 Jul 2013; Tim Harder <radhermit@gentoo.org> -nzbget-0.8.0.ebuild,
  -nzbget-10.1.ebuild, -nzbget-11.0_pre684.ebuild, -nzbget-11.0_pre705.ebuild,
  -nzbget-11.0_pre711.ebuild, -files/nzbget-0.7.0-openssl-1.patch:
  Remove old.

*nzbget-11.0 (02 Jul 2013)
