@@ -10,17 +10,14 @@ DIST nzbget-11.0.tar.gz 694197 SHA256 27abacf6c604969dc987b7e50689caef22a65dbb16
 DIST nzbget-12.0.tar.gz 1114126 SHA256 023c4e3b9c7e920d9ea72b60135b438ce13543454f79984c06fd15365b9a882e SHA512 2b6be81ea60108fdb609738eb719e98af97ffcab706a5c38b6b668ff85d42609f5a3eb85f0e2dc97547bf88ef249fa9060ef4583c0b57ac7fb39e139fa897294 WHIRLPOOL 62fcdb1d9bf9a39f52aef1087ecfcc5158089a73955e357288ab6bb387c7fd0987a8178ece2424634e28478af29fdf086b622730b93771970d7f297bfe11a5be
 EBUILD nzbget-10.2.ebuild 2682 SHA256 606cafd749ee2063b94b31223f43e58c40e4393be0f07dccdbf8d743bc1f0954 SHA512 c644c4cc2d12a4667ece3e0ef8d9dba7cc9807f66cdb031d599ad38d772543cb9fcbebf3f1388b93b5ef6147d87b3415e5f0281bc2a4728fba0d1b9f2065864a WHIRLPOOL 1a48b00dc04f756f431e5333ab038b9dc1c50b3bae1ac3d1c124c16f94788838f9af2bbc89c5163d6c58f05b4040f6f3ca1b4170beeca5251ec22d9b35b7813c
 EBUILD nzbget-11.0.ebuild 2669 SHA256 df2df52cd0d3860fef04d401ac2ae58af1dd7b079536fbbad100cc8f449531bf SHA512 6de685aa0dd62161152cbbb125370e448e105e0b11373f69056fad6c8c2fab00b14e823010806a63206cd7a5584b6f4dc6120e2acf9ceef13d3b8c42707a0afd WHIRLPOOL 317401ee8097ab3639c0d56d47c023a87274126a25cd8fea0531de9f1319b36358ca665dbbab221f8dd6a1eed30b23a3047b0e86a03d3fc3792f18fed011f8e0
+EBUILD nzbget-12.0-r1.ebuild 2667 SHA256 e4e0cc6a04d168823e5bbbe2558d430b49e7615ef4175bf4c5ee2a9990c9e95d SHA512 79f270750c970055232e5e29c09e862042c08a6c836c75f610a8733278c1ceff0b417a4cde02ea18b25fc2a03d5bc1458923819ed2f000d6e3c6ce5a4a35cca0 WHIRLPOOL 96d5d6c8caae258bc5adf83020e359cb245c0d36dae2c079c4e9af4f831090c15dbc44546afb9903e187c3c64c8ff08ab26f7714261625947e90f31a9528de9d
 EBUILD nzbget-12.0.ebuild 2559 SHA256 4a4b6027a704ea1ec2bd56c8e6ff375b7afe22af639f304912fdfff2727bfa13 SHA512 156e95d4ee0dc2002305d22da9081f33d1d27f47780ac14b7ee3f140a556e99a9eb023fbc01e96013b702bc0616ae9cc70171c1d65eb27fc1fa7df98177ebb17 WHIRLPOOL 64d67f3ae9a51c157a26278fa5a274594ed5e0de8b238278bb20923b90943e55220d70383b551190fe3497c677f0c4f68dfcc6cbb8032536d53feccd06623d45
-MISC ChangeLog 12465 SHA256 1f7f46f8fe6a1a305ae063c0e1114d7c8de4bc917a3728f6db53ca19fdc2477c SHA512 17bacda592b997bd3ff0e41b01afe428cedca8fbd0f8f4e27cdc08ee42b13f3c0a7c6aa2b9674f64da3669aa15f8176e1cbe1b9168f60ace3f4a8e2080bc6e19 WHIRLPOOL f9d49c5c4a8f89471e7123f47fca5fcd041b9e3be0cc546409a393cb87b9b31760b48717c3b9657ee1af19b040d11325ca64732a67a07111b54d59bb73b8fe88
+MISC ChangeLog 12653 SHA256 ec4d48e3787e63884c686da32a776a794caf5aa4cfe0d43d25d8f6f546f0d6d1 SHA512 7c5b0295cf089b070e76179e0b6a7b7416ae9563d0787b9d5da3bd70c50a2efaaca6e0325874a3044b413d380fef91713e4934488ae64f088269f11e1f41565c WHIRLPOOL b38e29d79d9dd970e122468650e56ffa8d83774bc4479c172e226ba54ef44d9e3e34fcafaa8977c5403939d257a99b36939a003cc6e2a7dc23aa0c37eef8c907
 MISC metadata.xml 539 SHA256 48f9bc14033c2a447322b31e146267269726e47b8925fed04eb763fae4655e31 SHA512 bb80f64f00b908a589e8c9aad6e7be82fe2d44507cf7cb625c2b718f28a62dd86b6e530be16e0cae1209109b5289829211d120db24b5c2249263a8227b18fd26 WHIRLPOOL adc2d684e0c54ad489401de1ab2a7a76307ccf7bccfd80b00aed81b3ba09983f933469b7bcb126372616e5eab52d4caa9564a9cd3f14e713acb84e35605fc2f8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSx6gWAAoJEEqz6FtPBkyjUIgH/RitA1UzT4MHQ4ZA06Lx2ys7
-Dk/ApAHqrfEjUmmMH8EdiYB/HXHuFCxsb+BSIHhmBLHRwCcYkMMNVJxZrq24Ffem
-0WlIBxo+nLQnouQW2YdqZy2wTcogRqbY2+C1CZ5AwFqrqm6IOp45F/1/ku9+I0KG
-/j1rQPNaS7ejhWDV80YxA/pfGOWG7Xb8WZPNultk+kp/8s4Qol21abijFkJ5aLPB
-QajuMB7t8M+yHwWxuR6xissWIMaaXFnCzWKDVpGUYdK4YrAZYtwysBosQhpKsbTd
-LGlfQytAkE6NBX/xZmyc1lSGS1yycFqqsIbPz59eH9wytAxqpjvRv6vFfUwhaOI=
-=O01s
+iEYEAREIAAYFAlMXoagACgkQI1lqEGTUzySoZgCeP6adARkJk1mgQkxZv2ZMnj21
+VGUAn3seZXGBIbttqZTPCU+tONkX6Ipf
+=1mI5
 -----END PGP SIGNATURE-----
