@@ -1,6 +1,12 @@
 # ChangeLog for net-nntp/nzbget
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.83 2014/01/04 06:20:04 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.84 2014/03/05 22:13:59 swegener Exp $
+
+*nzbget-12.0-r1 (05 Mar 2014)
+
+  05 Mar 2014; Sven Wegener <swegener@gentoo.org> +nzbget-12.0-r1.ebuild:
+  Make WebUI work, including managing configuration, bug #501858 by Mike
+  Nerone.
 
   04 Jan 2014; Tim Harder <radhermit@gentoo.org> -nzbget-9.1.ebuild,
   -nzbget-12.0_pre906.ebuild, -nzbget-12.0_pre914.ebuild,
